button readbitesize fix on mobile

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -61,7 +61,6 @@ a
         width: (1/3 * 100%)
 
 .tags
-    font-size: 0.8rem
     list-style: none
     li
         display: inline-block
@@ -120,6 +119,9 @@ button
     white-space: pre-wrap
     a
         text-decoration: underline
+        color: pink
+        &:hover
+            color: #f98dec
 
 .is-hidden
     display: none
@@ -129,6 +131,17 @@ button
 
 .text-small
     font-size: 0.8rem
+
+#bitesize-btn
+    font-size: 1rem
+    background: none
+    border: 1px solid $gold
+    color: $gold
+    padding: 5px 10px
+    transition: background 0.5s
+    &:hover
+        background: $gold
+        color: white
 
 @import 'labels'
 @import 'responsive'
